--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Like"></string>
+    <string name="Register">Register</string>
+    <string name="log_in">Login</string>
+    <string name="register_failed_used">Register failed! Your username has been used, please choose another username!</string>
+    <string name="register_success">Register succeeded!</string>
+    <string name="register_failed_fatal">Register failed! Fatal errors occur in the process!</string>
+    <string name="creating_account">Creating account, please wait</string>
+
+
+
 </resources>
