change all hard-coded string to dynamic string for localization

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="Register"></string>
+    <string name="log_in"></string>
+    <string name="register_failed_used"></string>
 </resources>
