--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="register_success">Register succeeded!</string>
     <string name="register_failed_fatal">Register failed! Fatal errors occur in the process!</string>
     <string name="creating_account">Creating account, please wait</string>
+    <string name="select_method">Select avatar from</string>
 
 
 
