--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="no_data">No Data</string>
     <string name="share_score">Share Score!</string>
     <string name="leaderboard">Leaderboard</string>
-    <string name="back">back</string>
+    <string name="back">Back</string>
 
 
 </resources>
