--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Road safety for Elder</string>
     <string name="title_activity_maps">Map</string>
-    <string name="title_activity_maps2">Map</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps2" translatable="false">Map</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
 
     <string name="Yes">Yes</string>
@@ -109,6 +109,16 @@
     <string name="share_score">Share Score!</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="back">Back</string>
+    <string name="choose_issue">Choose road safety issue</string>
+    <string name="road_crossing">Road Crossing</string>
+    <string name="crossing_bridges">Crossing Bridges</string>
+    <string name="cycling">Cycling/Motorbike</string>
+    <string name="pedestrian">Pedestrians</string>
+    <string name="driving">Driving</string>
+    <string name="passenger">Passenger</string>
+    <string name="post">Post</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
 
 
 </resources>
